# pocketsphinx

./: CMakeLists.txt
src/: CMakeLists.txt
src/libpocketsphinx/: CMakeLists.txt
src/programs/: CMakeLists.txt
